# projeto2_CG

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLANO_DESENVOLVIMENTO.md  README.md  config.yaml  pyproject.toml  requirements.txt
data/: IMG_3196.HEIC  IMG_3199.HEIC  IMG_3265.HEIC  IMG_3266.HEIC  IMG_3270.HEIC  IMG_3271.HEIC  IMG_3273.HEIC  IMG_3274.HEIC  IMG_3275.HEIC  IMG_3276.HEIC  IMG_3277.HEIC  IMG_3278.HEIC  IMG_3279.HEIC  IMG_3280.HEIC  IMG_3281.HEIC
src/: calibration.py  config.py  display.py  gui.py  livewire.py  log.py  main.py  measure.py  preprocess.py  render.py  segmentation.py  skeleton.py
tests/: conftest.py  test_config.py  test_livewire_core.py  test_measure.py
