[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto2-cg"
version = "0.1.0"
description = "Medição semiautomática de plântulas de alface (live-wire)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pillow>=10.0",
    "pillow-heif>=0.15",
    "click>=8.1",
    "pyyaml>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "C4", "SIM",
    "T20", "ARG", "PTH", "ERA", "RSE", "RET",
]
ignore = [
    "S101",
    "PTH123",
    "T201",
    "TRY003",
    "PLR2004",
    "PLR0913",
    "PLC0415",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T201"]
"src/main.py" = ["T201"]
"src/calibration.py" = ["ARG001"]
"src/livewire.py" = ["ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
enable_error_code = ["ignore-without-action"]
namespace-packages = true
explicit-package-bases = true
mypy_path = "src"

plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers --tb=short"
markers = [
    "slow",
    "integration",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
